# install-reason-manager

./: Cargo.toml  README.md
src/: main.rs  moree_state_manager.rs  package_manager_integration.rs  utils.rs
src/commands/: add.rs  apply.rs  diff.rs  edit.rs  list.rs  managed.rs  mod.rs  query.rs  unmanaged.rs
