[package]
name = "moree"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A command-line tool for explicitly managing package installations reasons."
repository = "https://github.com/tenzyu/moree"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
